--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
   "devDependencies": {
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
+    "stylelint": "^16.26.1",
+    "stylelint-config-standard": "^39.0.1",
+    "stylelint-config-tailwindcss": "^1.0.0",
     "tailwindcss": "^4.1.18"
   }
 }
